# lab

./: .gitignore  LICENSE  README.md
file-integrity-checker/: Cargo.toml  config.toml.example
file-integrity-checker/src/: compare.rs  hash.rs  lib.rs  logger.rs  main.rs  notify.rs  slack.rs
